--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["mission-control", "dashboard", "mern"],
+  "keywords": [
+    "mission-control",
+    "dashboard",
+    "mern"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,7 +22,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
